@@ -1,5 +1,6 @@
 
 0.9.10d Sep 15, 2005
+ * updated the package data download to save on disk i/o
  * created a doc/ directory for the man pages
  * added Russian and Unkrainian translations (and man pages) by sin of the DeepStyle team
  * updated files for 10.2
